# PDXP

./: README.md  catalina.out
backup/: server
myProtocol1/: myproto.h
myProtocol2/: MyProtocol.cpp  README.md  run.txt  test
myProtocol2/protobuf/: cc.cc  cekong.proto  cekongmsg.pb.cc  cekongmsg.pb.h
myProtocol3/: MyProtocol.cpp  README.md  run.txt
myProtocol3/protobuf/: cekong.proto  cekongmsg.proto
myProtocol3/time/: current_timestamp
myProtocol4/: MyProtocol.cpp  README.md  client  myprotocol.h  run.txt  test
myProtocol4/time/: current_timestamp  currenttime.cpp
myProtocol5/: CMakeLists.txt  README.md  main.cpp
myProtocol5/protobuf/: note.txt
myProtocol5/src/: myprotocol.h
myProtocol5/tcpSocket/: tcpServer.cpp
myProtocol5/time/: currenttime.cpp
myProtocol6/: CMakeLists.txt  README.md
myProtocol6/protobuf/: cc.cc  cekong.pb.h
myProtocol6/tcpSocket/: tcpClient.cpp  tcpServer.cpp
myProtocol7/: README.md  run.txt  test.md
myProtocol7/protobuf/: cekong.pb.cc
myProtocol7/tcpSocket/: back.cc
myProtocol8-UDP/: CMakeLists.txt  README.md  run.txt
myProtocol8-UDP/src/: client  sever
myProtocol8-UDP/tcpSocket/: tcpServer.cpp  udpClient.cpp  udpServer.cpp
myProtocol8/tcpSocket/: tcpClient.cpp
myProtocol9/: CMakeLists.txt  README.md  run.txt
myProtocol9/output/: runclient.sh  runserver.sh  server
myProtocol9/protobuf/: cekong.pb.cc  cekong.pb.h  cekong.proto
myProtocol9/src/: MessageManager.cpp  MessageManager.h  detach.cpp  myProtocol.cpp
myProtocol9/tcpSocket/: tcpClient.cpp
packup/output/: client
pdxpProtocal/: CMakeLists.txt  ReadMe.md
pdxpProtocal/MyProtocol/: MyProtocol.cpp  testpdxp
